flux/infrastructure/oauth2-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    gateway-access: "true"
    istio-injection: enabled
