flux/infrastructure/oauth2-proxy/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: http
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            port: 443
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
