flux/infrastructure/oauth2-proxy/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
