flux/infrastructure/oauth2-proxy/service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: oauth2-proxy
  name: oauth2-proxy
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - auth.stehessel.org
  http:
    - route:
        - destination:
            host: oauth2-proxy
            port:
              number: 80
